--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 button {
   text-align: center;
-  width: 175px;
+  width: 100%;
   background: white;
   border: 1px solid #cfcfcf;
   border-radius: 3px;
@@ -36,23 +36,19 @@ span {
 }
 
 .wrapper {
-  margin: 40px auto;
-  width: 750px;
-  /*border: 1px black solid;*/
+  width: 100%;
   text-align: center;
 }
 .grid {
-  /*border: 1px black dashed;*/
   height: 200px;
   margin: 0 0 30px 0;
 }
 .box {
-  width: 25%;
-  display: inline-block;
-  margin:0 5px 0 5px;
+  width: 100%;
+  margin: 0 auto 1.5em auto;
   background-size: cover;
   background-position: center;
-  height: 100%;
+  height: 20vh;
   position: relative;
 }
 #box1 {
