completed responsive airbnb css

--- a/css/style.css
+++ b/css/style.css
@@ -69,3 +69,17 @@ span {
 #box6 {
   background-image: url("../img/san-francisco-2.jpg");
 }
+
+@media (min-width: 1224px) {
+  button {
+    width: 18%;
+  }
+  .box {
+    display: inline-block;
+    height: 30vh;
+    width: 20%;
+  }
+  .buttonBox {
+    display: block;
+  }
+}
