--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,8 @@ span {
 .wrapper {
   width: 100%;
   text-align: center;
+  justify-content: center;
+
 }
 .grid {
   height: 200px;
@@ -69,3 +71,24 @@ span {
 #box6 {
   background-image: url("../img/san-francisco-2.jpg");
 }
+
+@media (min-width: 500px) {
+  .box {
+    width: 230px;
+    display: inline-block;
+    margin: 30px 10px 30px 10px;
+  }
+
+  button {
+    position: relative;
+    width: 230px;
+    display: block;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
+  h3 {
+    margin: 30px 0px 20px 0px;
+  }
+}
+
