--- a/css/style.css
+++ b/css/style.css
@@ -76,25 +76,20 @@ Can't use inline as it does not allow us to determine the height and width.
 */
 
 @media (min-width: 800px) {
-    #box1, #box2, #box3, #box4, #box5, #box6 {
+    .box {
       display: inline-block;
       width: 250px;
       height: 250px;
+      margin: 0 15px 1.5em 10px;
     }
 
     button {
-    text-align: center;
     width: 20%;
-    background: white;
-    border: 1px solid #cfcfcf;
-    border-radius: 3px;
-    color: #57595c;
-    font-size: 0.8em;
-    font-weight: 500;
-    padding: 5px 0;
-    margin: 0 0 18px 0;
     display: block;
     margin: 0 auto;
   }
 
 }
+  
+   
+
