--- a/css/style.css
+++ b/css/style.css
@@ -39,10 +39,7 @@ span {
   width: 100%;
   text-align: center;
 }
-.grid {
-  height: 200px;
-  margin: 0 0 30px 0;
-}
+
 .box {
   width: 100%;
   margin: 0 auto 1.5em auto;
@@ -68,4 +65,49 @@ span {
 }
 #box6 {
   background-image: url("../img/san-francisco-2.jpg");
+}
+
+@media (min-width: 401px) {
+  .wrapper {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  button {
+    width: 50%;
+  }
+}
+
+@media (min-width: 601px) {
+  .guidebook-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+  }
+
+  .destinations-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+  }
+}
+
+@media (min-width: 801px) {
+  .wrapper {
+    width: 75%;
+  }
+}
+
+@media (min-width: 901px) {
+  .wrapper {
+    width: 70%;
+  }
+}
+
+@media (min-width: 1001px) {
+  .wrapper {
+    width: 60%;
+  }
 }
