--- a/css/style.css
+++ b/css/style.css
@@ -89,3 +89,28 @@ h1 {
 #SF2 {
   background-image: url('../img/san-francisco-2.jpg');
 }
+
+
+@media (min-width: 830px) {
+  .location {
+    width: 200px;
+    display: inline-block;
+  }
+
+  .photos {
+    text-align: center;
+  }
+}
+
+
+@media (min-width: 1100px) {
+  .location {
+    width: 200px;
+    display: inline-block;
+  }
+
+  .photos {
+    text-align: center;
+  }
+}
+
