--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,10 @@ h1 {
   margin: 0 auto;
 }
 
+.section{
+  text-align: center;
+}
+
 .title {
   text-align: center;
   height: 4em;
@@ -32,11 +36,11 @@ h1 {
 
 .location {
   width: 100%;
-  height: 200px;
+  height: 300px;
   background-position: center;
   background-size: cover;
   text-align: center;
-  margin: 1em 0.5em;
+  margin: 40px 0 20px 0;
 }
 
 .location-name {
@@ -59,7 +63,7 @@ h1 {
   border-radius: 3px;
   text-align: center;
   padding: 4px;
-  width: 250px;
+  width: 30%;
   background-color: white;
   margin: 0 auto;
   cursor: pointer;
@@ -94,7 +98,7 @@ h1 {
   background-image: url('../img/san-francisco-2.jpg');
 }
 
-@media (min-width: 1300px) {
+/*@media (min-width: 1300px) {
   .title p {
     line-height: 0.1;
   }
@@ -113,4 +117,4 @@ h1 {
   .btn-further {
     width: 20%;
   }
-}
+}*/
